adding support for register user. adding ability to either take pic or pick a pic from library while registering.

--- a/myApp/Info.plist
+++ b/myApp/Info.plist
@@ -50,5 +50,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allows you to add profile photo</string>
 </dict>
 </plist>
